--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/panton" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <body>
@@ -32,9 +34,9 @@
         <!-- login/register/search -->
         <div class="log-reg">
             <!-- login -->
-            <div class="login-nav"><h3>LOGIN</h3></div>
+            <div class="login-nav"><a href="">LOGIN</a></div>
             <!-- register -->
-            <div class="register-nav"><h3>REGISTER</h3></div>
+            <div class="register-nav"><a href="">REGISTRE</a></div>
             <!-- search -->
             <div class="search-nav"><img src="asset/img/search.svg" alt=""></div>
         </div>
@@ -49,7 +51,7 @@
                 <div id="live-casino" class="lmc">
                     <div id="live-casino-head" class="lmc-h">
                         <h3>Live casino</h3>
-                        <img src="" alt="">
+                        <img src="asset/img/arrow-d.svg" alt="">
                     </div>
                     <div id="live-casino-main" class="main-c">
                         <ul>
@@ -87,7 +89,7 @@
                 <div id="ace-king" class="lmc">
                     <div id="ace-king-head" class="lmc-h">
                         <h3>ace king</h3>
-                        <img src="" alt="">
+                        <img src="asset/img/arrow-d.svg" alt="">
                     </div>
                     <div id="ace-king-main" class="main-c">
                         <ul>
@@ -147,12 +149,12 @@
                         <h3>Featured&nbsp;</h3>
                         <h3 id="title-edit-hero">games</h3>
                     </div>
-                    <div class="button-all-games">
+                    <div id="f-boxes" class="button-all-games">
                         <h2>VIEW ALL GAMES</h2>
                         <img src="asset/img/arrow-d-small.svg" alt="">
                     </div>
                 </div>
-                <div class="hero1-main">
+                <div class="hero-main" id="hero1-main">
                     <div id="hero1-1" class="herostyle">
                         <div class="hero-title">
                             <img src="asset/img/balck-jack-purple.svg" alt="">
@@ -161,7 +163,7 @@
                         <div id="fi1" class="featured-img"></div>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. has been the industry's standard dummy.</p>
                         <div id='to-black-jack' class="button-to-go">
-                            <h4>GO TO BLACK JACK</h4>
+                            <h4><a href="#">GO TO BLACK JACK</a></h4>
                             <img src="asset/img/arrow-right.svg" alt="">
                         </div>
                     </div>
@@ -173,9 +175,54 @@
                         <div id="fi2" class="featured-img"></div>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. has been the industry's standard dummy.</p>
                         <div id='to-slots' class="button-to-go">
-                            <h4>GO TO SLOTS</h4>
+                            <h4><a href="#">GO TO SLOTS</a></h4>
                             <img src="asset/img/arrow-right.svg" alt="">
                         </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Featured boxes -->
+            <section id='hero2' class="hero">
+                <div class="title-hero">
+                    <div class="title-text">
+                        <h3>Featured&nbsp;</h3>
+                        <h3 id="title-edit-hero">boxes</h3>
+                    </div>
+                    <div id="f-boxes" class="button-all-games">
+                        <h2>VIEW ALL BOXES</h2>
+                        <img src="asset/img/arrow-d-small.svg" alt="">
+                    </div>
+                </div>
+                <div class="hero-main" id="hero2-main">
+                    <div class="fb-main" id="fb1-main">
+                        <div id="hilo" class="fb-box"></div>
+                        <div id="roulette-m" class="fb-box"></div>
+                        <div id="keno" class="fb-box"></div>
+                        <div id="hash-dice" class="fb-box"></div>
+                        <div id="keno-m" class="fb-box"></div>
+                    </div>
+                    <div class="fb-main" id="fb2-main">
+                        <div id="mine" class="fb-box"></div>
+                        <div id="blackjackfb1" class="fb-box"></div>
+                        <div id="crash-fb1" class="fb-box"></div>
+                        <div id="wheel" class="fb-box"></div>
+                        <div id="roulette-m2" class="fb-box"></div>
+                    </div>
+                </div>
+            </section>
+            <!-- table rank -->
+            <section id="tables-section" class="hero">
+                <div class="ablb">
+                    <div class="all-bets">
+                        <img src="asset/img/all-bets.svg" alt="">
+                        <h4>ALL BETS</h4>
+                    </div>
+                    <div class="leaderboard">
+                        <img src="asset/img/leaderboard.svg" alt="">
+                        <h4>LEADERBOARD</h4>
+                    </div>
+                    <div class="table-rank">
+                        
                     </div>
                 </div>
             </section>
