--- a/index.html
+++ b/index.html
@@ -221,8 +221,112 @@
                         <img src="asset/img/leaderboard.svg" alt="">
                         <h4>LEADERBOARD</h4>
                     </div>
-                    <div class="table-rank">
-                        
+                </div>
+                <!-- main table -->
+                <div class="table-rank">
+                    <!-- table head -->
+                    <div class="table-head"><p>GAME</p><p>PLAYER GAME</p><p>WAGER</p><p>MULTIPLAYER</p><p>PAYOUT</p></div>
+                    <!-- table content 1 -->
+                    <div id='tc1' class="table-c">
+                        <div class="table-game">
+                            <img src="asset/img/crown-table.svg" alt="">
+                            <p>BLACKJACK</p>
+                        </div>
+                        <p class="player-game-p">ATLAS</p>
+                        <div class="table-wager">
+                            <p>$1000</p>
+                            <img src="asset/img/t-dollar.svg" alt="">
+                        </div>
+                        <p id="table-multi">2.25X</p>
+                        <p id="table-payout">$2250</p>
+                    </div>
+                    <!-- table content 2 -->
+                    <div id='tc2' class="table-c">
+                        <div class="table-game">
+                            <img src="asset/img/crown-table.svg" alt="">
+                            <p>BLACKJACK</p>
+                        </div>
+                        <p class="player-game-p">ATLAS</p>
+                        <div class="table-wager">
+                            <p>$1000</p>
+                            <img src="asset/img/t-dollar.svg" alt="">
+                        </div>
+                        <p id="table-multi">2.25X</p>
+                        <p id="table-payout">$2250</p>
+                    </div>
+                    <!-- table content 3 -->
+                    <div id='tc3' class="table-c">
+                        <div class="table-game">
+                            <img src="asset/img/crown-table.svg" alt="">
+                            <p>BLACKJACK</p>
+                        </div>
+                        <p class="player-game-p">ATLAS</p>
+                        <div class="table-wager">
+                            <p>$1000</p>
+                            <img src="asset/img/t-dollar.svg" alt="">
+                        </div>
+                        <p id="table-multi">2.25X</p>
+                        <p id="table-payout">$2250</p>
+                    </div>
+                    <!-- table content 4 -->
+                    <div id='tc4' class="table-c">
+                        <div class="table-game">
+                            <img src="asset/img/crown-table.svg" alt="">
+                            <p>BLACKJACK</p>
+                        </div>
+                        <p class="player-game-p">ATLAS</p>
+                        <div class="table-wager">
+                            <p>$1000</p>
+                            <img src="asset/img/t-dollar.svg" alt="">
+                        </div>
+                        <p id="table-multi">2.25X</p>
+                        <p id="table-payout">$2250</p>
+                    </div>
+                    <!-- table content 5 -->
+                    <div id='tc5' class="table-c">
+                        <div class="table-game">
+                            <img src="asset/img/crown-table.svg" alt="">
+                            <p>BLACKJACK</p>
+                        </div>
+                        <p class="player-game-p">ATLAS</p>
+                        <div class="table-wager">
+                            <p>$1000</p>
+                            <img src="asset/img/t-dollar.svg" alt="">
+                        </div>
+                        <p id="table-multi">2.25X</p>
+                        <p id="table-payout">$2250</p>
+                    </div>
+                    <!-- table content 6 -->
+                    <div id='tc6' class="table-c">
+                        <div class="table-game">
+                            <img src="asset/img/crown-table.svg" alt="">
+                            <p>BLACKJACK</p>
+                        </div>
+                        <p class="player-game-p">ATLAS</p>
+                        <div class="table-wager">
+                            <p>$1000</p>
+                            <img src="asset/img/t-dollar.svg" alt="">
+                        </div>
+                        <p id="table-multi">2.25X</p>
+                        <p id="table-payout">$2250</p>
+                    </div>
+                    <!-- table content 7 -->
+                    <div id='tc7' class="table-c">
+                        <div class="table-game">
+                            <img src="asset/img/crown-table.svg" alt="">
+                            <p>BLACKJACK</p>
+                        </div>
+                        <p class="player-game-p">ATLAS</p>
+                        <div class="table-wager">
+                            <p>$1000</p>
+                            <img src="asset/img/t-dollar.svg" alt="">
+                        </div>
+                        <p id="table-multi">2.25X</p>
+                        <p id="table-payout">$2250</p>
+                    </div>
+                    <div class="showmore">
+                        <p>SHOW MORE</p>
+                        <img src="asset/img/arrow-d-b.svg" alt="">
                     </div>
                 </div>
             </section>
