--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                             <li><img src="asset/img/roulette.svg" alt=""><a href="">Versus Battles</a></li>
                             <li><img src="asset/img/gameshows.svg" alt=""><a href="">Coinflip</a><div class="live-c-n"><h3>NEW</h3></div></li></li>
                             <li><img src="asset/img/crash.svg" alt=""><a href="">Lottery</a>
-                            <li><img src="asset/img/slots.svg" alt=""><a href="">Raffles</a></li>
-                            <li><img src="asset/img/slots.svg" alt=""><a href="">Towers</a><div class="live-c-t"><h3>TRENDING</h3></div></li>
+                            <li><img src="asset/img/raffles.svg" alt=""><a href="">Raffles</a></li>
+                            <li><img src="asset/img/towers.svg" alt=""><a href="">Towers</a><div class="live-c-t"><h3>TRENDING</h3></div></li>
                             <li><img src="asset/img/slots.svg" alt=""><a href="">Mines</a></li>
                         </ul>
                     </div>
@@ -324,7 +324,8 @@
                         <p id="table-multi">2.25X</p>
                         <p id="table-payout">$2250</p>
                     </div>
-                    <div class="showmore">
+                    <!-- show more  -->
+                    <div id="showmore">
                         <p>SHOW MORE</p>
                         <img src="asset/img/arrow-d-b.svg" alt="">
                     </div>
