--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/panton" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Barlow' rel='stylesheet'>
 
     <title>Document</title>
 </head>
@@ -328,6 +329,35 @@
                     <div id="showmore">
                         <p>SHOW MORE</p>
                         <img src="asset/img/arrow-d-b.svg" alt="">
+                    </div>
+                </div>
+            </section>
+            <!-- hero 4 = about -->
+            <section id="about" class="hero">
+                <div class="about-us">
+                    <img src="asset/img/logo.svg" alt="">
+                    <p>ACEKING is an online casino that accepts<br>various cryptocurrencies as well as credit cards.<br>We offer a wide selection of over 6000 games.</p>
+                </div>
+                <div class="home-contact">
+                    <!-- HOME -->
+                    <div id="home" class="hc">
+                        <h3>HOME</h3>
+                        <ul>
+                            <li><a href="">Affiliates</a></li>
+                            <li><a href="">Free Drops</a></li>
+                            <li><a href="">Leaderboard</a></li>
+                            <li><a href="">FAQs</a></li>
+                            <li><a href="">Terms Of Service</a></li>
+                        </ul>
+                    </div>
+                    <!-- CONTACT -->
+                    <div id="contact" class="hc">
+                        <h3>CONTACT</h3>
+                        <ul>
+                            <li><img src="asset/img/mail.svg" alt=""><p href="">contact@company.com</p></li>
+                            <li><img src="asset/img/phone.svg" alt=""><p href="">(414) 687 - 5892</p></li>
+                            <li><img src="asset/img/localisation.svg" alt=""><p href="">794 Mcallister St<br>San Francisco, 94102</p></li>
+                        </ul>
                     </div>
                 </div>
             </section>
