--- a/index.html
+++ b/index.html
@@ -361,6 +361,28 @@
                     </div>
                 </div>
             </section>
+            <!-- hero 5 = footer -->
+            <section class="hero" id="footer">
+                <!-- social media -->
+                <div class="socialmedia">
+                    <a id="fb" href="#"><img alt="" src="asset/img/facebook.svg"></a>
+                    <a id="ins" href="#"><img alt="" src="asset/img/instagram.svg"></a>
+                    <a id="twit" href="#"><img alt="" src="asset/img/twitter.svg"></a>
+                    <a id="tk" href="#"><img alt="" src="asset/img/tiktok.svg"></a>
+                    <a id="dis" href="#"><img alt="" src="asset/img/discord.svg"></a>
+                    <a id="ytb" href="#"><img alt="" src="asset/img/youtube.svg"></a>
+                </div>
+                <!-- brands logo -->
+                <div class="brands-logo">
+                    <!-- logo of brands  -->
+                    <img id="btc" class="logo-b" src="asset/img/bitcoin.svg" alt="">
+                    <img id="mon" class="logo-b" src="asset/img/monero.svg" alt="">
+                    <img id="bin" class="logo-b" src="asset/img/binance.svg" alt="">
+                    <img id="eth" class="logo-b" src="asset/img/ethereum.svg" alt="">
+                    <img id="tron" class="logo-b" src="asset/img/tron.svg" alt="">
+                    <img id="ripl" class="logo-b" src="asset/img/ripple.svg" alt="">
+                </div>
+            </section>
         </div>
     </div>
 </body>
