7atyt footer kharj l container

--- a/index.html
+++ b/index.html
@@ -332,58 +332,60 @@
                     </div>
                 </div>
             </section>
-            <!-- hero 4 = about -->
-            <section id="about" class="hero">
-                <div class="about-us">
-                    <img src="asset/img/logo.svg" alt="">
-                    <p>ACEKING is an online casino that accepts<br>various cryptocurrencies as well as credit cards.<br>We offer a wide selection of over 6000 games.</p>
-                </div>
-                <div class="home-contact">
-                    <!-- HOME -->
-                    <div id="home" class="hc">
-                        <h3>HOME</h3>
-                        <ul>
-                            <li><a href="">Affiliates</a></li>
-                            <li><a href="">Free Drops</a></li>
-                            <li><a href="">Leaderboard</a></li>
-                            <li><a href="">FAQs</a></li>
-                            <li><a href="">Terms Of Service</a></li>
-                        </ul>
-                    </div>
-                    <!-- CONTACT -->
-                    <div id="contact" class="hc">
-                        <h3>CONTACT</h3>
-                        <ul>
-                            <li><img src="asset/img/mail.svg" alt=""><p href="">contact@company.com</p></li>
-                            <li><img src="asset/img/phone.svg" alt=""><p href="">(414) 687 - 5892</p></li>
-                            <li><img src="asset/img/localisation.svg" alt=""><p href="">794 Mcallister St<br>San Francisco, 94102</p></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <!-- hero 5 = footer -->
-            <section class="hero" id="footer">
-                <!-- social media -->
-                <div class="socialmedia">
-                    <a id="fb" href="#"><img alt="" src="asset/img/facebook.svg"></a>
-                    <a id="ins" href="#"><img alt="" src="asset/img/instagram.svg"></a>
-                    <a id="twit" href="#"><img alt="" src="asset/img/twitter.svg"></a>
-                    <a id="tk" href="#"><img alt="" src="asset/img/tiktok.svg"></a>
-                    <a id="dis" href="#"><img alt="" src="asset/img/discord.svg"></a>
-                    <a id="ytb" href="#"><img alt="" src="asset/img/youtube.svg"></a>
-                </div>
-                <!-- brands logo -->
-                <div class="brands-logo">
-                    <!-- logo of brands  -->
-                    <img id="btc" class="logo-b" src="asset/img/bitcoin.svg" alt="">
-                    <img id="mon" class="logo-b" src="asset/img/monero.svg" alt="">
-                    <img id="bin" class="logo-b" src="asset/img/binance.svg" alt="">
-                    <img id="eth" class="logo-b" src="asset/img/ethereum.svg" alt="">
-                    <img id="tron" class="logo-b" src="asset/img/tron.svg" alt="">
-                    <img id="ripl" class="logo-b" src="asset/img/ripple.svg" alt="">
-                </div>
-            </section>
         </div>
     </div>
+    <footer>
+        <!-- hero 4 = about -->
+        <section id="about" class="hero">
+            <div class="about-us">
+                <img src="asset/img/logo.svg" alt="">
+                <p>ACEKING is an online casino that accepts<br>various cryptocurrencies as well as credit cards.<br>We offer a wide selection of over 6000 games.</p>
+            </div>
+            <div class="home-contact">
+                <!-- HOME -->
+                <div id="home" class="hc">
+                    <h3>HOME</h3>
+                    <ul>
+                        <li><a href="">Affiliates</a></li>
+                        <li><a href="">Free Drops</a></li>
+                        <li><a href="">Leaderboard</a></li>
+                        <li><a href="">FAQs</a></li>
+                        <li><a href="">Terms Of Service</a></li>
+                    </ul>
+                </div>
+                <!-- CONTACT -->
+                <div id="contact" class="hc">
+                    <h3>CONTACT</h3>
+                    <ul>
+                        <li><img src="asset/img/mail.svg" alt=""><p href="">contact@company.com</p></li>
+                        <li><img src="asset/img/phone.svg" alt=""><p href="">(414) 687 - 5892</p></li>
+                        <li><img src="asset/img/localisation.svg" alt=""><p href="">794 Mcallister St<br>San Francisco, 94102</p></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- hero 5 = footer -->
+        <section class="hero" id="footer">
+            <!-- social media -->
+            <div class="socialmedia">
+                <a id="fb" href="#"><img alt="" src="asset/img/facebook.svg"></a>
+                <a id="ins" href="#"><img alt="" src="asset/img/instagram.svg"></a>
+                <a id="twit" href="#"><img alt="" src="asset/img/twitter.svg"></a>
+                <a id="tk" href="#"><img alt="" src="asset/img/tiktok.svg"></a>
+                <a id="dis" href="#"><img alt="" src="asset/img/discord.svg"></a>
+                <a id="ytb" href="#"><img alt="" src="asset/img/youtube.svg"></a>
+            </div>
+            <!-- brands logo -->
+            <div class="brands-logo">
+                <!-- logo of brands  -->
+                <img id="btc" class="logo-b" src="asset/img/bitcoin.svg" alt="">
+                <img id="mon" class="logo-b" src="asset/img/monero.svg" alt="">
+                <img id="bin" class="logo-b" src="asset/img/binance.svg" alt="">
+                <img id="eth" class="logo-b" src="asset/img/ethereum.svg" alt="">
+                <img id="tron" class="logo-b" src="asset/img/tron.svg" alt="">
+                <img id="ripl" class="logo-b" src="asset/img/ripple.svg" alt="">
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
