--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <!-- main table -->
                 <div class="table-rank">
                     <!-- table head -->
-                    <div class="table-head"><p>GAME</p><p>PLAYER GAME</p><p>WAGER</p><p>MULTIPLAYER</p><p>PAYOUT</p></div>
+                    <div class="table-head"><p id="game-h">GAME</p><p id="pgame-h">PLAYER GAME</p><p id="wager-h">WAGER</p><p id="multi-h">MULTIPLAYER</p><p id="payout-h">PAYOUT</p></div>
                     <!-- table content 1 -->
                     <div id='tc1' class="table-c">
                         <div class="table-game">
