--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
     </header>
     <!-- container -->
     <div class="b-container">
+        <!-- login panel -->
+        <div class="panel">
+            <div id="login-panel"></div>
+        </div>
         <!-- left menu -->
         <div class="s1">
             <!-- left-menu-part1 -->
