--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         <!-- login and register panel -->
         <div class="panel" id="panel">
             <!-- login panel -->
+            <img id="x" src="asset/img/x.webp" alt="" onclick="registre_login('x')">
             <div id="login-panel">
-                <img id="x" src="asset/img/x.webp" alt="">
+                
                 <img class="logo-l" src="asset/img/logo.svg" alt="">
                 <h3>Welcome back!</h3>
                 <p class="login-p" >Login to your account</p>
@@ -70,7 +71,9 @@
                 </form>
             </div>
             <!-- registre panel -->
+            <img id="x" src="asset/img/x.webp" alt="" onclick="registre_login('x')">
             <div id="registre-panel">
+                
                 <img class="logo-l" src="asset/img/logo.svg" alt="">
                 <h3>Register your account</h3>
                 <p class="registre-p" >Create your free account</p>
