--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <section class="left-menu-1">
                 <!-- live casino -->
                 <div id="live-casino" class="lmc">
-                    <div id="live-casino-head" class="lmc-h">
+                    <div onclick="unvisible_menu('live-casino-main')" id="live-casino-head" class="lmc-h cd">
                         <h3>Live casino</h3>
                         <img src="asset/img/arrow-d.svg" alt="">
                     </div>
@@ -120,7 +120,7 @@
                 </div>
                 <!-- aceking exclusives -->
                 <div id="aceking-exclusives" class="lmc">
-                    <div id="aceking-exclusives-head" class="lmc-h">
+                    <div id="aceking-exclusives-head" class="lmc-h cd" onclick="unvisible_menu('aceking-exclusives-main')">
                         <h3>Aceking exclusives</h3>
                         <img src="asset/img/arrow-d.svg" alt="">
                     </div>
@@ -142,7 +142,7 @@
             <section class="left-menu-2">
                 <!-- ACE KING -->
                 <div id="ace-king" class="lmc">
-                    <div id="ace-king-head" class="lmc-h">
+                    <div id="ace-king-head" class="lmc-h cd" onclick="unvisible_menu('ace-king-main')">
                         <h3>ace king</h3>
                         <img src="asset/img/arrow-d.svg" alt="">
                     </div>
@@ -157,7 +157,7 @@
                 </div>
                 <!-- Other -->
                 <div id="other" class="lmc">
-                    <div id="other-head" class="lmc-h">
+                    <div onclick="unvisible_menu('other-main')" id="other-head" class="lmc-h cd">
                         <h3>Other</h3>
                         <img src="asset/img/arrow-d.svg" alt="">
                     </div>
