--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <input id="name-re" class="areatext" type="email" placeholder="Your Full Name">
                     <input id="email-re" class="areatext email-l" type="email" placeholder="Your Email Address">
                     <div class="password">
-                        <input id="password-re" class="areatext password-l" type="password" placeholder="Password">
+                        <input id="password-re" class="areatext password-l" type="password" placeholder="Create a Strong Password">
                         <img src="asset/img/hide.svg" alt="">
                     </div>
                     <div class="signup-l">
