--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <!-- registre panel -->
             <div id="registre-panel">
                 <img class="xx" id="x" src="asset/img/x.webp" alt="" onclick="registre_login('x')">
-                <img class="logo-l" src="asset/img/logo.svg" alt="">
+                <img class="logo-l-s logo-l" src="asset/img/logo.svg" alt="">
                 <h3>Register your account</h3>
                 <p class="registre-p" >Create your free account</p>
                 <form id='form-re' class="form" action="">
